# 3.19.0 (2025-XX-XX)

 * Add the `invoke` filter
 * Make `{}` optional for the `types` tag
 * Add `LastModifiedExtensionInterface` and implementation in `AbstractExtension` to track modification of runtime classes

# 3.18.0 (2024-12-29)

 * Fix unary operator precedence change
 * Ignore `SyntaxError` exceptions from undefined handlers when using the `guard` tag
 * Add a way to stream template rendering (`TemplateWrapper::stream()` and `TemplateWrapper::streamBlock()`)

# 3.17.1 (2024-12-12)

 * Fix the null coalescing operator when the test returns null
 * Fix the Elvis operator when used as '? :' instead of '?:'
 * Support for invoking closures

# 3.17.0 (2024-12-10)

 * Fix ArrayAccess with objects as keys
 * Support underscores in number literals
 * Deprecate `ConditionalExpression` and `NullCoalesceExpression` (use `ConditionalTernary` and `NullCoalesceBinary` instead)

# 3.16.0 (2024-11-29)

 * Deprecate `InlinePrint`
 * Fix having macro variables starting with an underscore
 * Deprecate not passing a `Source` instance to `TokenStream`
 * Deprecate returning `null` from `TwigFilter::getSafe()` and `TwigFunction::getSafe()`, return `[]` instead

# 3.15.0 (2024-11-17)
 
 * [BC BREAK] Add support for accessing class constants with the dot operator;
   this can be a BC break if you don't use UPPERCASE constant names
 * Add Spanish inflector support for the `plural` and `singular` filters in the String extension
 * Deprecate `TempNameExpression` in favor of `LocalVariable`
 * Deprecate `NameExpression` in favor of `ContextVariable`
 * Deprecate `AssignNameExpression` in favor of `AssignContextVariable`
 * Remove `MacroAutoImportNodeVisitor`
 * Deprecate `MethodCallExpression` in favor of `MacroReferenceExpression`
 * Fix support for the "is defined" test on `_self.xxx` (auto-imported) macros
 * Fix support for the "is defined" test on inherited macros
 * Add named arguments support for the dot operator arguments (`foo.bar(some: arg)`)