@@ -105,6 +105,13 @@ class Node implements \Countable, \IteratorAggregate
         return $repr;
     }
 
+    public function __clone()
+    {
+        foreach ($this->nodes as $name => $node) {
+            $this->nodes[$name] = clone $node;
+        }
+    }
+
     /**
      * @return void
      */
