@@ -1,5 +1,6 @@
 # 3.19.0 (2025-XX-XX)
 
+ * Fix `constant()` behavior when used with `??`
  * Add the `invoke` filter
  * Make `{}` optional for the `types` tag
  * Add `LastModifiedExtensionInterface` and implementation in `AbstractExtension` to track modification of runtime classes
